app/assets/stylesheets/_user.scss
// 
// user.scss
// Use this to write your custom SCSS
//

//gallery 
.accoImage {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 100% !important;

}

.accoImage img {
  padding-right: 10px;
  padding-bottom: 10px;
}

.cover {

  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  background-position: center;

}

.dates {
  color: #FFAE42;
}



.packageform {
  margin-top: 100px;
}

.galleryImages {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;

}

.galleryImages img {
  padding-right: 10px;
  padding-bottom: 10px;
}




.disclaimer {
  margin-top: 40px !important;
}

.howToget {
  font-family: 'Noto', serif !important;
}

.aboutContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.aboutText {
  padding-top: 50px;
  font-family: 'Open Sans', sans-serif !important;
}

.aboutImage {

  margin-top: 40px;
}

@media (min-width: 768px) {
  .aboutText {
    width: 50%;
  }

  .aboutImage {
    width: 50%;
  }

  .video {
    width: 50%;
  }
}

@media (max-width: 767px) {
  .aboutText {
    width: 90%;
  }

  .aboutImage {
    width: 100%;
  }

  .video {
    width: 90%;
  }
}

div.gallery {
  border: 1px solid #ccc;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  width: 100%;
  height: auto;
}

div.desc {
  padding: 15px;
  text-align: center;
}

* {
  box-sizing: border-box;
}

.responsive {
  padding: 0 6px;
  float: left;
  width: 24.99999%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }
}

@media only screen and (max-width: 500px) {
  .responsive {
    width: 100%;
  }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

//gallery end ---------------------------------------------------------------------------------------

.flash {
  @extend .alert;
  text-align: center;
  margin-top: -1rem;
  margin-bottom: 2rem;

  &.notice {
    @extend .alert-success;
  }

  &.alert {
    @extend .alert-danger;
  }

  top: 120px;
}

.videoContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
}

.video {
  width: 80%;
  margin-top: 70px;
  border: solid #cb6843;
}

.mapContainer {
  border: solid #cb6843;
}

.newlogo {
  display: flex;
  justify-content: center;
  margin-top: 70px;
  top: 50px;

}

.hometextContainer {
  display: flex;
  justify-content: center;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 30px;
  width: 100%;
}

.explorebutton {
  margin-top: 20px;
}

.bookButton {
  color: $terracota;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50px !important;
  width: 300px !important;
  margin: 40px auto 40px;

}

.whyArogyam {
  margin-right: 20px;
  font-family: 'Noto', serif;
}

.nav-link:hover {
  color: $terracota !important;
}

#back_to {
  margin-bottom: 50px !important;
  display: block;
  margin: 0 auto;
  max-width: fit-content;
}

#packageName {
  font-family: 'Noto', serif;

}


.bg-success {
  --ar-bg-opacity: 1;
  background-color: #e78774 !important;
}

.bg-footer {
  background-color: $secondary;
}


.roundedimages {
  margin: 10px;
  border-radius: 10px;
}




.nav-item {
  font-size: 13pt;
}


@media (max-width: 409px) {

  #navbarBrand {
    margin-top: 10px;

  }
}

@media (max-width: 992px) {
  #navbarBrand {
    display: none;
  }
}

a {
  text-decoration: none !important;
}






.btn-outline-primary:hover {
  border-color: #448c74;
  color: white !important;

}


.belowimage {
  position: relative;
  margin-top: auto;
}



.home_text {
  position: relative;
  margin-top: auto;
  top: 40%;
}

.btn-outline-primary {
  --ar-btn-color: #207a48;
  --ar-btn-border-color: #207a48;
  --ar-btn-hover-color: #000;
  --ar-btn-hover-bg: #448c74;
  --ar-btn-hover-border-color: none !important;
  --ar-btn-focus-shadow-rgb: 68, 140, 116;
  --ar-btn-active-color: #000;
  --ar-btn-active-bg: #448c74;
  --ar-btn-active-border-color: #448c74;
  --ar-btn-active-shadow: unset;
  --ar-btn-disabled-color: #448c74;
  --ar-btn-disabled-bg: transparent;
  --ar-btn-disabled-border-color: #448c74;
  --ar-gradient: none;
}

.card {
  background-color: #f96d46 !important;
}

#cardTitle {
  color: white;
  font-family: 'Noto', serif !important;
  font-size: 16pt;

}

#card-short {
  color: white !important;
  font-family: 'Open Sans', sans-serif !important;
}

#roundButton {
  color: white !important;
}

.rounded-circle {

  border-color: white !important;
}

.text-muted {
  color: #2F3E46 !important;
}


.card-hover-secondary:hover {
  background-color: $gray-700 !important;

}

.card-body:hover h4,
p {
  color: white;
}

.trix-content.hover {
  color: white
}

.form-control {
  display: block;
  width: 500px;
}

#package {
  font-family: 'Open Sans', sans-serif !important;
  color: black;
}



.package-titles {
  color: black;
  font-family: 'Noto', serif !important;
  margin-top: 20px;
  margin-bottom: 10px;


}

.admin {
  display: inline-flex;
}

.trix-content {
  color: black;
}

.cardHeading {
  font-family: 'Noto', serif !important;
}



.card-footer:hover {
  color: white;
}

#package:hover {
  color: black !important;
}



.fs-lg {
  color: $gray-900 !important;
  font-family: 'Open Sans', sans-serif;
  font-size: 12pt !important;
  max-width: 500px;
  bottom: 100px !important;


}

.logo {
  margin-top: 30;
  margin-bottom: 20px;
}



h4 {
  font-family: 'Barlow', sans-serif;
  font-size: 13pt;
}



.packages {
  font-family: "Barlow", sans-serif;
}

#treelogo {
  display: inline !important;
  margin-right: 7px;
  margin-left: 20px !important;
}

